TestRepo2/src/objects/Item_Customization__c.object
<CustomObject>
    <description>POS Project: object that represents different customizations that a catalog item may have</description>
    <fields>
        <fullName>Custom_Attribute_Length__c</fullName>
        <label>Custom Attribute Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Customizations</relationshipLabel>
        <relationshipName>Item_Customizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Magento_ID__c</fullName>
        <externalId>true</externalId>
        <label>Magento ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Item Customization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Attribute Label</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IZ00000000IRTMA2_00NZ0000000IIo5MAG</fullName>
        <active>true</active>
        <errorMessage>The Item Customization selected must belong to the Cart Item&apos;s related Item</errorMessage>
        <field>Cart_Item__c.Item_Customization__c</field>
        <filterItems>
            <field>Item_Customization__c.Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Cart Item_Item Customization</name>
        <sourceObject>Cart_Item__c</sourceObject>
    </namedFilters>
    <pluralLabel>Item Customizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Custom_Attribute_Length</fullName>
        <active>true</active>
        <description>Enforces the custom attribute length to be a valid number</description>
        <errorConditionFormula>Custom_Attribute_Length__c &lt; 1</errorConditionFormula>
        <errorDisplayField>Custom_Attribute_Length__c</errorDisplayField>
        <errorMessage>Please provide a valid custom attribute length</errorMessage>
    </validationRules>
</CustomObject>